# design-pattern

./: CMakeLists.txt  README.md
AbstractFactory/: EmployeeDao1.cpp  EmployeeDao2.cpp  EmployeeDao3.cpp
Bridge/: bridge1.cpp  bridge2.cpp
ChainOfResponsibility/: ChainOfResponsibility.cpp
Decorator/: decorator1.cpp  decorator2.cpp  decorator3.cpp  mixin1.cpp  mixin2.cpp
FactoryMethod/: GenericFactory.cpp  GenericShape.h  Shape.h  ShapeFactory.h
Prototype/: Prototype.h  crtp_Prototype.cpp
ScopeGuard/: ScopeGuard.cpp
TemplateMethod/: crtp.cpp  crtp_template.cpp  template1.cpp  template2.cpp
adapter/: Adapter.cpp
builder/: builder1.cpp  builder2.cpp  builder3.cpp
command/: command.cpp
composite/: composite.cpp
iterator/: iterator_oo.cpp
observer/: FileDownloader.cpp  FileDownloader2.cpp  FileDownloader3.cpp  FileDownloader4.cpp  FileDownloader5.cpp  FileDownloader_Generic1.cpp  FileDownloader_Generic2.cpp
pimpl/: Impl.h  MyClass0.h  MyClass1.cpp  MyClass1.h  MyClass2.cpp  MyClass2.h
proxy/: proxy.cpp
singleton/: singleton.cpp
state/: state1.cpp  state2.cpp
strategy/: strategy1.cpp  strategy2.cpp
visitor/: Visitor_Shape0.cpp  Visitor_Shape1.cpp  Visitor_Shape2.cpp  Visitor_Shape3.cpp
